<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CamaraActivity">
    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgenFoto"
        android:src="@mipmap/ic_launcher" />
    <TextView
        android:id="@+id/txtMensajeCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/mensajepermisos" />
    <Button
        android:id="@+id/btnPermisoCamara"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btnPermiso" />
    <Button
        android:id="@+id/btnTomarFoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/botonTomarFoto" />
</LinearLayout>