<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".TextToSpeechActivity">
    <EditText
        android:id="@+id/edtText2Speech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_tts">
        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/btnText2SpeechPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_tts1" />
    <Button
        android:id="@+id/btnText2SpeechSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_tts2" />
</LinearLayout>